# xGGEV4

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dggev4.cpp  linalg.cpp  linalg.h  zggev4.cpp
benchmarks/: bench_dggev.cpp  bench_scalability.cpp
include/: xggev4.h
src/: dggev4.cpp
